--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>Personal_Finance</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>war</packaging>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -32,4 +32,7 @@
             <version>2.13.3</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>income</finalName>
+    </build>
 </project>
